Fixed issue where the grid was too wide.
Added maxColumns input and implemented the grid in more places

--- a/src/ui/app/areas/InRules/InRulesList/InRulesList.scss
+++ b/src/ui/app/areas/InRules/InRulesList/InRulesList.scss
@@ -1,6 +1,12 @@
 @import '../../../styles/theme';
 
 .InRulesList {
+  &-container {
+    margin: 0 auto;
+    max-width: $application-max-width;
+    padding: $grid-size * 3;
+  }
+
   &-paragraph {
     @include typography-paragraph;
     color: $color-text;
